force-app/main/default/objects/SG_Log__e/SG_Log__e.object-meta.xml
<CustomObject>
    <description>This platform event should be fired if you wish to log an action for SCV Go package.</description>
    <label>SCV Go Log Event</label>
    <pluralLabel>SCV Go Log Events</pluralLabel>
</CustomObject>