force-app/main/default/objects/SG_Log__e/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <label>Exception Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>