force-app/main/default/objects/SG_Log__e/fields/Trace__c.field-meta.xml
<CustomField>
    <fullName>Trace__c</fullName>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>