force-app/main/default/objects/SG_Log__e/fields/User_Information__c.field-meta.xml
<CustomField>
    <fullName>User_Information__c</fullName>
    <label>User Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>